@@ -3,11 +3,14 @@ package medrecords.dao.impl;
 import medrecords.dao.AppointmentRepository;
 import medrecords.dao.IdGenerator;
 import medrecords.model.Appointment;
+import medrecords.model.Prescription;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
+
 @Repository
 public class AppointmentRepositoryInMemory extends RepositoryInMemory<Long, Appointment>
         implements AppointmentRepository {
@@ -17,29 +20,11 @@ public class AppointmentRepositoryInMemory extends RepositoryInMemory<Long, Appo
     }
 
     @Override
-    public List<Appointment> findByDoctorId(Long id) {
-        var all =  findAll();
-        var filtered = all.stream()
-                .filter(a -> a.getDoctorId().equals(id))
-                .toList();
-        return filtered;
-    }
-
-    @Override
-    public List<Appointment> findByPatientId(Long id) {
-        var all =  findAll();
-        var filtered = all.stream()
-                .filter(a -> a.getPatientId().equals(id))
-                .toList();
-        return filtered;
-    }
-
-    @Override
-    public List<Appointment> findByDate(LocalDate date) {
-        var all =  findAll();
-        var filtered = all.stream()
-                .filter(a -> a.getDate().equals(date))
-                .toList();
-        return filtered;
+    public List<Appointment> findByDoctorIdPatientIdDate(Long docId, Long patientId, LocalDate date) {
+        return findAll().stream()
+                .filter(prescription -> docId == null || docId.equals(prescription.getDoctorId()))
+                .filter(prescription -> patientId == null || patientId.equals(prescription.getPatientId()))
+                .filter(prescription -> date == null || date.equals(prescription.getDate()))
+                .collect(Collectors.toList());
     }
 }
